--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,36 @@
 <resources>
+    <string name="app_name">My Workout Tracker</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="drawer_open">Abrir</string>
+    <string name="drawer_close">Fechar</string>
 
     <!-- Login Activity -->
-    <string name="app_name">My Workout Tracker</string>
     <string name="email_label">E-mail</string>
     <string name="password_label">Senha</string>
     <string name="login_label">Entrar</string>
     <string name="forgot_password_label">Esqueceu sua senha?</string>
+
+    <string name="action_settings">Configurações</string>
+    <string name="profile_icon">Ícone de Perfil</string>
+
+    <string name="nav_item_home">Minha Ficha</string>
+    <string name="nav_item_history">Meu Histórico</string>
+    <string name="nav_item_calendar">Calendário</string>
+    <string name="nav_title_other">Outros</string>
+    <string name="nav_item_share">Compartilhar</string>
+    <string name="nav_item_about">Sobre</string>
+
+    <!-- navigation drawer item labels  -->
+    <string-array name="nav_drawer_labels">
+        <item>@string/nav_item_home</item>
+        <item>@string/nav_item_history</item>
+        <item>@string/nav_item_calendar</item>
+    </string-array>
+
+    <string name="title_calendar">Calendário</string>
+    <string name="title_history">Meu Histórico</string>
+    <string name="title_home">Minha Ficha</string>
 
 </resources>
