--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,11 @@
     <string name="nav_item_share">Compartilhar</string>
     <string name="nav_item_about">Sobre</string>
 
+    <!-- Activities' Titles-->
+    <string name="home_title">Ficha</string>
+    <string name="history_title">Histórico</string>
+    <string name="calendar_title">Calendário</string>
+
     <!-- navigation drawer item labels  -->
     <string-array name="nav_drawer_labels">
         <item>@string/nav_item_home</item>
